--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         function Auth() {
             var URL = 'https://notify-bot.line.me/oauth/authorize?';
             URL += 'response_type=code';
-            URL += '&client_id=traMRmk4upTzLy909Mxxxx';
-            URL += '&redirect_uri=http://localhost/test/index.php';//ถ้า login แล้ว เลือกกลุ่มหรือตัวเอง ให้กลับมาหน้านี้
+            URL += '&client_id=osZTEGyp8eEwLov8PkgxiX';
+            URL += '&redirect_uri=https://www.google.com';//ถ้า login แล้ว เลือกกลุ่มหรือตัวเอง ให้กลับมาหน้านี้
             URL += '&scope=notify';
-            URL += '&state=supachai.wi@gmail.com';//กำหนด  user หรือ อะไรก็ได้ที่สามารถบอกถึงว่าเป็น user ในระบบ
+            URL += '&state=wachirah13@gmail.com';//กำหนด  user หรือ อะไรก็ได้ที่สามารถบอกถึงว่าเป็น user ในระบบ
             window.location.href = URL;
         }
     </script>
